chp05-services/set544-tls/set544-2-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-nodeport
  namespace: chp05-set544
spec:
  type: NodePort # not LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30123
  selector:
    app: kubia
